# SearchTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
include/: searcher.h  threadPool.h
src/: CMakeLists.txt  main.cpp  searcher.cpp  threadPool.cpp
